fixed alignment of forecast button

--- a/src/components/forecastbutton/style_forecastbutton.less
+++ b/src/components/forecastbutton/style_forecastbutton.less
@@ -1,5 +1,5 @@
 @import '~style/helpers';
 
-img {
-  opacity: .5;
+.forecast{
+  padding-left: 4px;
 }
