--- a/src/components/plusButton/style_iphone.less
+++ b/src/components/plusButton/style_iphone.less
@@ -14,7 +14,6 @@
 
 .bottombar{
 	display: inline;
-	padding-right: 50px;
 }
 
 .bottombar button{
